--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id="hrs24" class="time "></div>
+    <div id="hrs12" class="time "></div>
+    <label class="switch">
+        <input type="checkbox" id="button">
+        <span class="slider"></span>
+    </label>
+    <script src="./script.js"></script>
 </body>
 </html>
