--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <div id="hrs24" class="time "></div>
-    <div id="hrs12" class="time "></div>
-    <label class="switch">
-        <input type="checkbox" id="button">
-        <span class="slider"></span>
-    </label>
+<body class="time">
+    <div id="hrs24" class="time"></div>
+    <div id="hrs12" class="time"></div>
+    <div id="buttons">
+        <button id="light" class="button change" type="button">light</button>
+        <button id="dark" class="button change" type="button">dark</button>
+    </div>
+    <div id="formate">
+        <button class="formate change" id="twentyfour" >24 HRS</button>
+        <button class="formate change" id="twelve" >12 HRS</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
